@@ -1174,14 +1174,12 @@ class OSWGR800Packet(Packet):
         pkt['usUnits'] = weewx.METRICWX
         pkt.update(Packet.parse_lines(lines, OSWGR800Packet.PARSEINFO))
         return OS.insert_ids(pkt, OSWGR800Packet.__name__)
-		
+
 
 class ProloguePacket(Packet):
 	# 2017-03-19 : Prologue Temperature and Humidity Sensor
-	# Sample data:
-	# {"time" : "2017-03-15 20:14:19", "model" : "Prologue sensor", "id" : 5, "rid" : 166, "channel" : 1, "battery" : "OK", "button" : 0, 
-	# "temperature_C" : -0.700, "humidity" : 49}
-	
+	# {"time" : "2017-03-15 20:14:19", "model" : "Prologue sensor", "id" : 5, "rid" : 166, "channel" : 1, "battery" : "OK", "button" : 0, "temperature_C" : -0.700, "humidity" : 49}
+
     IDENTIFIER = "Prologue sensor"
 
     @staticmethod
